--- a/src/app/components/modal-create-employee/modal-create-employee.component.html
+++ b/src/app/components/modal-create-employee/modal-create-employee.component.html
@@ -1,29 +1,35 @@
-  <ion-header>
-    <ion-toolbar>
-      <ion-buttons slot="start">
-        <ion-button (click)="cancel()" [strong]="true" color="danger">Cancelar</ion-button>
+  <ion-header style="padding:0;margin:0">
+    <ion-toolbar style="padding: 0;">
+      <ion-buttons  style="padding-left: 0;" slot="start">
+        <ion-button  style="padding: 0; margin: 0" (click)="cancel()" [strong]="true" color="primary">
+          <ion-icon style="padding: 0; margin: 0;" slot="start" name="close-outline">
+          </ion-icon>Cancelar
+        </ion-button>
       </ion-buttons>
-      <ion-title>Nuevo empleado</ion-title>
-      <ion-buttons slot="end">
-        <ion-button  type="submit" [strong]="true" color="success" (click)="confirm()" [disabled]="!credentials.valid">Aceptar</ion-button>
+      <ion-title>Crear</ion-title>
+      <ion-buttons style="padding-left: 0;" slot="end">
+        <ion-button style="padding: 0; margin: 0;" type="submit" [strong]="true" color="secundary" (click)="confirm()" [disabled]="!credentials.valid">
+          Aceptar<ion-icon style="padding: 0; margin: 0;" slot="end" name="checkmark-outline">
+          </ion-icon></ion-button>
       </ion-buttons>
     </ion-toolbar>
   </ion-header>
 
 <ion-content mode="ios">
 
-  <!-- <form [formGroup]="credentials" (ngSubmit)="confirm()">
-    <ion-item >
-      <ion-label  color="primary">Foto de perfil</ion-label>
-      <div *ngIf="selectedImageDataUrl">
-        <img [src]="selectedImageDataUrl" style="width: 40%; margin-top:8px;" alt="Selected Image" (click)="takePicture()">
-      </div>
-      <div *ngIf="!selectedImageDataUrl">
-        <img style="width: 40%; margin-top:8px;" src="https://ionicframework.com/docs/img/demos/avatar.svg" (click)="takePicture()">
-      </div>
-    </ion-item>
+  <!-- <ion-item >
+    <ion-label  color="primary">Foto de perfil</ion-label>
+    <div *ngIf="selectedImageDataUrl">
+      <img [src]="selectedImageDataUrl" style="width: 40%; margin-top:8px;" alt="Selected Image" (click)="takePicture()">
+    </div>
+    <div *ngIf="!selectedImageDataUrl">
+      <img style="width: 40%; margin-top:8px;" src="https://ionicframework.com/docs/img/demos/avatar.svg" (click)="takePicture()">
+    </div>
+  </ion-item> -->
 
-    <ion-item>
+  <!-- <form [formGroup]="credentials" (ngSubmit)="confirm()">
+
+     <ion-item>
       <ion-label  color="primary">Nombre</ion-label>
       <ion-input type="text" placeholder="John" formControlName="name"></ion-input>
     </ion-item>
@@ -66,21 +72,40 @@
       <ion-label  color="primary">Fecha de nacimiento</ion-label>
       <ion-datetime presentation="date" formControlName="birth_date"></ion-datetime>
     </ion-item>
+
   </form> -->
 
+
+  <!--NUEVO-->
   <ion-card style="box-shadow: none !important;">
+
     <ion-card-header>
+
       <ion-card-title style="text-align: center; top:10px;">Nuevo empleado</ion-card-title>
       <ion-card-subtitle style="text-align: center; top:10px;">Empleado</ion-card-subtitle>
 
-      <!--FOTO DE PERFIL-->
+      <!--
+        prueba
+       -->
+
+
     <div class="card">
       <div class="header">
         <div class="avatar">
-            <img src="https://ionicframework.com/docs/img/demos/avatar.svg" alt="">
 
-            <ion-button class="buttonNewImage">
-              <ion-icon name="camera"></ion-icon>
+            <!-- <img src="https://ionicframework.com/docs/img/demos/avatar.svg" alt=""> -->
+
+            <div *ngIf="selectedImageDataUrl">
+              <img [src]="selectedImageDataUrl" alt="Selected Image" >
+            </div>
+
+            <div *ngIf="!selectedImageDataUrl">
+              <img src="https://ionicframework.com/docs/img/demos/avatar.svg" alt="">
+            </div>
+
+            <ion-button class="buttonNewImage" (click)="takePicture()">
+              <ion-icon name="camera">
+              </ion-icon>
             </ion-button>
 
         </div>
@@ -88,90 +113,91 @@
     </div>
 
     </ion-card-header>
+
     <ion-card-content>
       <ion-list>
 
-        <!--NOMBRE COMPLETO-->
-        <ion-item lines = "">
-          <ion-label style="font-family: QuickSand; font-weight: 600;"  position="stacked" color="primary">
-           <ion-icon name="person"></ion-icon>
-          Nombre completo</ion-label>
-          <ion-input placeholder="Nombre(s)"></ion-input>
+        <form [formGroup]="credentials" (ngSubmit)="confirm()">
 
-        </ion-item>
+          <ion-item>
+            <ion-label style="font-family: QuickSand; font-weight: 600;" position="stacked" color="primary">
+             <ion-icon name="person"></ion-icon>
+            Nombre completo</ion-label>
+            <ion-input formControlName="name" type="text" placeholder="Nombre(s)"></ion-input>
+
+                <ion-note  style="font-family: QuickSand; font-weight: 600;" slot="error" *ngIf="(name.dirty || name.touched) && name.invalid">
+                  Únicamente letras</ion-note>
+
+            </ion-item>
+
+          <ion-item>
+            <ion-label style="size: 0; margin: 0; padding: 0; width: 0; height: 0;"></ion-label>
+            <ion-input formControlName="middle_name" type="text" placeholder="Apellido Paterno"></ion-input>
+            <ion-note  style="font-family: QuickSand; font-weight: 600;" slot="error" *ngIf="(middle_name.dirty || middle_name.touched) && middle_name.invalid">Únicamente letras</ion-note>
+          </ion-item>
+
+          <ion-item>
+            <ion-label style="size: 0; margin: 0; padding: 0; width: 0; height: 0;"></ion-label>
+            <ion-input formControlName="last_name" type="text" placeholder="Apellido Materno"></ion-input>
+            <ion-note  style="font-family: QuickSand; font-weight: 600;" slot="error" *ngIf="(last_name.dirty || last_name.touched) && last_name.invalid">Únicamente letras</ion-note>
+          </ion-item>
+
+          <ion-item lines = "">
+            <ion-label style="font-family: QuickSand; font-weight: 600;"  position="stacked" color="primary">
+             <ion-icon name="call-sharp"></ion-icon>
+            Telefono</ion-label>
+            <ion-input type="tel" formControlName="phone" placeholder="6611100822" inputmode="phone"></ion-input>
+            <ion-note  style="font-family: QuickSand; font-weight: 600;" slot="error" *ngIf="(phone.dirty || phone.touched) && phone.invalid">Única y solamente 10 digitos</ion-note>
+          </ion-item>
+
+          <ion-item>
+            <ion-label style="font-family: QuickSand; font-weight: 600;" position="stacked" color="primary">
+              <ion-icon name="mail"></ion-icon>
+            E-mail</ion-label>
+            <ion-input formControlName="email" type="text" placeholder="example@exam.com"></ion-input>
+            <ion-note  style="font-family: QuickSand; font-weight: 600;" slot="error" *ngIf="(email.dirty || email.touched) && email.invalid">email inválido</ion-note>
+          </ion-item>
+
+          <ion-item >
+             <ion-label style="font-family: QuickSand; font-weight: 600;" position="stacked" color="primary">
+                <ion-icon name="keypad"></ion-icon>
+              Numero de control</ion-label>
+             <ion-input formControlName="num_control" type="text" placeholder="EXAMPLE1020201"></ion-input>
+          </ion-item>
+
+          <ion-item>
+            <ion-label style="font-family: QuickSand; font-weight: 600;" color="primary">
+              <ion-icon name="transgender"></ion-icon> Genero</ion-label>
+              <ion-select placeholder="Elegir" okText="Aceptar" cancelText="Cancelar" formControlName="gender">
+                <ion-select-option value="M">Masculino</ion-select-option>
+                <ion-select-option value="F">Femenino</ion-select-option>
+                <ion-select-option value="O">Otro</ion-select-option>
+              </ion-select>
+          </ion-item>
+
+          <ion-accordion-group >
+            <ion-accordion  value="start" >
+
+              <ion-item slot="header" id="accordion" (click)="scrollToAccordion()">
+                <ion-label style="font-family: QuickSand; font-weight: 600;" color="primary">
+                  <ion-icon name="calendar-number">
+                  </ion-icon> Fecha de nacimiento
+                </ion-label>
+              </ion-item>
+
+              <ion-datetime
+                preferWheel="true"
+                presentation="date"
+                formControlName="birth_date"
+                id="datetime"
+                slot="content"
+                ></ion-datetime>
+
+            </ion-accordion>
+          </ion-accordion-group>
 
 
-        <ion-item>
-          <ion-input placeholder="Apellido Paterno"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-input placeholder="Apellido Materno"></ion-input>
-        </ion-item>
-
-
-        <!--NUM CELULAR-->
-        <ion-item lines = "">
-          <ion-label style="font-family: QuickSand; font-weight: 600;"  position="stacked" color="primary">
-           <ion-icon name="call-sharp"></ion-icon>
-          Telefono</ion-label>
-          <ion-input placeholder="6611100822"></ion-input>
-        </ion-item>
-
-
-        <!--CORREO ELECTRONICO-->
-        <ion-item>
-          <ion-label style="font-family: QuickSand; font-weight: 600;" position="stacked" color="primary">
-            <ion-icon name="mail"></ion-icon>
-          E-mail</ion-label>
-          <ion-input placeholder="example@exam.com"></ion-input>
-        </ion-item>
-
-           <!--NUMERO DE CONTROL-->
-        <ion-item >
-           <ion-label style="font-family: QuickSand; font-weight: 600;" position="stacked" color="primary">
-              <ion-icon name="keypad"></ion-icon>
-            Numero de control</ion-label>
-           <ion-input placeholder="EXAMPLE1020201"></ion-input>
-        </ion-item>
-
-          <!--GENERO-->
-        <ion-item >
-          <ion-label style="font-family: QuickSand; font-weight: 600;" color="primary">
-            <ion-icon name="transgender"></ion-icon> Genero</ion-label>
-            <ion-select placeholder="Elegir" okText="Aceptar" cancelText="Cancelar" formControlName="gender">
-              <ion-select-option value="M">Masculino</ion-select-option>
-              <ion-select-option value="F">Femenino</ion-select-option>
-              <ion-select-option value="O">Otro</ion-select-option>
-            </ion-select>
-        </ion-item>
-
-              <!--FECHA DE NACIMIENTO-->
-              <ion-accordion-group>
-
-                <ion-accordion value="colors">
-
-                  <ion-icon name="add-outline"></ion-icon>
-
-                  <ion-item slot="header">
-                    <ion-label style="font-family: QuickSand; font-weight: 600;" color="primary"><ion-icon name="calendar-number"></ion-icon> Fecha de nacimiento</ion-label>
-                    <ion-note slot="end" id="datetimeValue"></ion-note>
-                  </ion-item>
-
-
-                  <ion-datetime
-                    presentation="date"
-                    id="datetime"
-                    slot="content"
-                  ></ion-datetime>
-
-                </ion-accordion>
-
-              </ion-accordion-group>
-
-
-
-
-          <!-- <ion-datetime presentation="date" formControlName="birth_date"></ion-datetime> -->
+        </form>
 
       </ion-list>
     </ion-card-content>
