--- a/src/app/components/modal-edit-employee/modal-edit-employee.component.html
+++ b/src/app/components/modal-edit-employee/modal-edit-employee.component.html
@@ -11,7 +11,7 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-item lines="none">
+  <!-- <ion-item lines="none">
     <ion-label position="stacked" color="primary">Foto de perfil</ion-label>
     <ion-img
     style="width: 40%; margin-top:8px;"
@@ -59,5 +59,8 @@
         <ion-datetime id="datetime" presentation="date"></ion-datetime>
       </ng-template>
     </ion-modal>
-  </ion-item>
+  </ion-item> -->
+
+
+
 </ion-content>
