--- a/src/app/components/modal-create-employee/modal-create-employee.component.html
+++ b/src/app/components/modal-create-employee/modal-create-employee.component.html
@@ -6,9 +6,9 @@
           </ion-icon>Cancelar
         </ion-button>
       </ion-buttons>
-      <ion-title>Crear</ion-title>
+      <ion-title>Añadir</ion-title>
       <ion-buttons style="padding-left: 0;" slot="end">
-        <ion-button style="padding: 0; margin: 0;" type="submit" [strong]="true" color="secundary" (click)="confirm()" [disabled]="!credentials.valid">
+        <ion-button style="padding: 0; margin: 0;" type="submit" [strong]="true" color="secundary" (click)="confirm()" [disabled]="!credentials.valid||!selectedImageDataUrl">
           Aceptar<ion-icon style="padding: 0; margin: 0;" slot="end" name="checkmark-outline">
           </ion-icon></ion-button>
       </ion-buttons>
@@ -79,14 +79,12 @@
   <!--NUEVO-->
   <ion-card style="box-shadow: none !important;">
 
+
+
     <ion-card-header>
 
       <ion-card-title style="text-align: center; top:10px;">Nuevo empleado</ion-card-title>
       <ion-card-subtitle style="text-align: center; top:10px;">Empleado</ion-card-subtitle>
-
-      <!--
-        prueba
-       -->
 
 
     <div class="card">
@@ -95,11 +93,11 @@
 
             <!-- <img src="https://ionicframework.com/docs/img/demos/avatar.svg" alt=""> -->
 
-            <div *ngIf="selectedImageDataUrl">
+            <div *ngIf="selectedImageDataUrl" >
               <img [src]="selectedImageDataUrl" alt="Selected Image" >
             </div>
 
-            <div *ngIf="!selectedImageDataUrl">
+            <div *ngIf="!selectedImageDataUrl" >
               <img src="https://ionicframework.com/docs/img/demos/avatar.svg" alt="">
             </div>
 
@@ -118,6 +116,19 @@
       <ion-list>
 
         <form [formGroup]="credentials" (ngSubmit)="confirm()">
+
+          <div class="centered-div" *ngIf="!selectedImageDataUrl">
+            <p><ion-text color="secundary"style="text-align:center ;font-family: QuickSand; font-weight: 600;">
+              <ion-icon name="warning"></ion-icon>
+              Aviso: <br> debe establecer una foto de empleado
+            </ion-text></p>
+          </div>
+          <div class="centered-div" *ngIf="selectedImageDataUrl">
+            <p><ion-text color="primary"style="text-align:center ;font-family: QuickSand; font-weight: 600;">
+              <ion-icon name="checkmark"></ion-icon>
+              Foto de empleado establecida
+            </ion-text></p>
+          </div>
 
           <ion-item>
             <ion-label style="font-family: QuickSand; font-weight: 600;" position="stacked" color="primary">
@@ -195,7 +206,6 @@
 
             </ion-accordion>
           </ion-accordion-group>
-
 
         </form>
 
