--- a/src/app/components/modal-edit-profile/modal-edit-profile.component.html
+++ b/src/app/components/modal-edit-profile/modal-edit-profile.component.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-  <ion-toolbar>
+  <!-- <ion-toolbar>
 
     <ion-buttons slot="start">
       <ion-button (click)="cancel()" [strong]="true" color="danger">Cancelar</ion-button>
@@ -11,16 +11,32 @@
       <ion-button (click)="confirm()" [strong]="true" color="success">Aceptar</ion-button>
     </ion-buttons>
 
+  </ion-toolbar> -->
+
+  <ion-toolbar style="padding: 0;">
+
+    <ion-buttons style="padding-left: 0;" slot="start">
+      <ion-button style="padding: 0; margin: 0" (click)="cancel()" [strong]="true" color="primary">
+        <ion-icon style="padding: 0; margin: 0;" slot="start" name="close-outline">
+        </ion-icon>Cancelar
+      </ion-button>
+    </ion-buttons>
+    <ion-title>Editar perfil</ion-title>
+    <ion-buttons style="padding-left: 0;" slot="end">
+      <ion-button style="padding: 0; margin: 0;" type="submit" [strong]="true" color="secundary" (click)="confirm()" [disabled]="!newProfileInfo.valid" >
+        Aceptar<ion-icon style="padding: 0; margin: 0;" slot="end" name="checkmark-outline">
+        </ion-icon></ion-button>
+    </ion-buttons>
+
   </ion-toolbar>
+
+
 
 </ion-header>
 
-
-
-
 <ion-content class="ion-padding" [fullscreen]="true">
 
-  <div text-center>
+  <!-- <div text-center>
       <p align="center">
         <ion-img
         style="width: 40%; margin-top: 50px;"
@@ -71,6 +87,133 @@
 
     </ion-item>
 
-  </form>
+  </form> -->
+
+  <ion-card style="box-shadow: none !important;">
+
+    <ion-card-header>
+
+      <ion-card-title style="text-align: center; top:10px;"></ion-card-title>
+      <ion-card-subtitle style="text-align: center; top:10px;"></ion-card-subtitle>
+
+
+    <div class="card">
+      <div class="header">
+        <div class="avatar">
+
+            <!-- <img src="https://ionicframework.com/docs/img/demos/avatar.svg" alt=""> -->
+
+            <div *ngIf="selectedImageDataUrl" >
+              <img [src]="selectedImageDataUrl" alt="Selected Image" >
+            </div>
+
+            <div *ngIf="!selectedImageDataUrl" >
+              <img [src]="profileAvatar" alt="">
+            </div>
+
+
+            <ion-button class="buttonNewImage" (click)="takePicture()">
+              <ion-icon name="camera">
+              </ion-icon>
+            </ion-button>
+
+        </div>
+      </div>
+    </div>
+
+    </ion-card-header>
+
+    <ion-card-content>
+      <ion-list>
+
+        <form [formGroup]="newProfileInfo" (ngSubmit)="confirm()">
+
+          <!-- <div class="centered-div" *ngIf="!selectedImageDataUrl">
+            <p><ion-text color="secundary"style="text-align:center ;font-family: QuickSand; font-weight: 600;">
+              <ion-icon name="warning"></ion-icon>
+              Aviso: <br> debe establecer una foto de empleado
+            </ion-text></p>
+          </div>
+          <div class="centered-div" *ngIf="selectedImageDataUrl">
+            <p><ion-text color="primary"style="text-align:center ;font-family: QuickSand; font-weight: 600;">
+              <ion-icon name="checkmark"></ion-icon>
+              Foto de empleado establecida
+            </ion-text></p>
+          </div> -->
+
+          <ion-item>
+            <ion-label style="font-family: QuickSand; font-weight: 600;" position="stacked" color="primary">
+             <ion-icon name="person"></ion-icon>
+            Nombre completo</ion-label>
+            <ion-input [ngModel]="profileName" formControlName="name" type="text" placeholder="Nombre(s)"></ion-input>
+
+                <ion-note  style="font-family: QuickSand; font-weight: 600;" slot="error" *ngIf="(name.dirty || name.touched) && name.invalid">
+                  Únicamente letras</ion-note>
+
+            </ion-item>
+
+          <ion-item>
+            <ion-label style="size: 0; margin: 0; padding: 0; width: 0; height: 0;"></ion-label>
+            <ion-input [ngModel]="profileMiddleName" formControlName="middle_name" type="text" placeholder="Apellido Paterno"></ion-input>
+            <ion-note  style="font-family: QuickSand; font-weight: 600;" slot="error" *ngIf="(middle_name.dirty || middle_name.touched) && middle_name.invalid">Únicamente letras</ion-note>
+          </ion-item>
+
+          <ion-item>
+            <ion-label style="size: 0; margin: 0; padding: 0; width: 0; height: 0;"></ion-label>
+            <ion-input [ngModel]="profileLastName" formControlName="last_name" type="text" placeholder="Apellido Materno"></ion-input>
+            <ion-note  style="font-family: QuickSand; font-weight: 600;" slot="error" *ngIf="(last_name.dirty || last_name.touched) && last_name.invalid">Únicamente letras</ion-note>
+          </ion-item>
+
+          <ion-item>
+            <ion-label style="font-family: QuickSand; font-weight: 600;" position="stacked" color="primary">
+              <ion-icon name="mail"></ion-icon>
+            E-mail</ion-label>
+            <ion-input [ngModel]="profileEmail" formControlName="email" type="text" placeholder="example@exam.com"></ion-input>
+            <ion-note  style="font-family: QuickSand; font-weight: 600;" slot="error" *ngIf="(email.dirty || email.touched) && email.invalid">email inválido</ion-note>
+          </ion-item>
+<!--
+          <ion-item >
+             <ion-label style="font-family: QuickSand; font-weight: 600;" position="stacked" color="primary">
+                <ion-icon name="keypad"></ion-icon>
+              Numero de control</ion-label>
+             <ion-input formControlName="num_control" type="text" placeholder="EXAMPLE1020201"></ion-input>
+          </ion-item> -->
+
+          <!-- <ion-item>
+            <ion-label style="font-family: QuickSand; font-weight: 600;" color="primary">
+              <ion-icon name="transgender"></ion-icon> Genero</ion-label>
+              <ion-select placeholder="Elegir" okText="Aceptar" cancelText="Cancelar" formControlName="gender">
+                <ion-select-option value="M">Masculino</ion-select-option>
+                <ion-select-option value="F">Femenino</ion-select-option>
+                <ion-select-option value="O">Otro</ion-select-option>
+              </ion-select>
+          </ion-item> -->
+
+          <!-- <ion-accordion-group >
+            <ion-accordion  value="start" >
+
+              <ion-item slot="header" id="accordion" (click)="scrollToAccordion()">
+                <ion-label style="font-family: QuickSand; font-weight: 600;" color="primary">
+                  <ion-icon name="calendar-number">
+                  </ion-icon> Fecha de nacimiento
+                </ion-label>
+              </ion-item>
+
+              <ion-datetime
+                preferWheel="true"
+                presentation="date"
+                formControlName="birth_date"
+                id="datetime"
+                slot="content"
+                ></ion-datetime>
+
+            </ion-accordion>
+          </ion-accordion-group> -->
+
+        </form>
+
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
 
 </ion-content>
