--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -49,7 +49,8 @@
         employee.num_control,
         employee.gender,
         employee.birth_date,
-        employee.avatar)">
+        employee.avatar,
+        employee.id)">
           <ion-icon slot="icon-only" name="create-outline"></ion-icon>
         </ion-item-option>
 
