tab 2, alineacion de graficas

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -10,24 +10,47 @@
     </ion-label>
   </ion-item>
 
-  <div id="chartContainer">
-    <!--GRAFICA 1-->
-    <div id="chContainer1">
-      <div id="radialChart1" class="chart"></div>
-    </div>
 
-    <!--GRAFICA 2-->
-    <div id="chContainer1">
-      <div id="chart1" class="chart"></div>
-    </div>
+ <ion-grid style="margin-top: 5%;">
 
-    <!--GRAFICA 3-->
-    <div id="chContainer2">
-      <div id="chart2" class="chart"></div>
-    </div>
+  <ion-row>
+    <ion-col class="entryData">
 
-  </div>
+      <div id="chartContainer">
+        <!--GRAFICA 1-->
+        <div id="chContainer1">
+          <div id="radialChart1" class="chart"></div>
+        </div>
+     </div>
 
+    </ion-col >
+
+    <ion-col class="entryData">
+
+      <div id="chartContainer">
+        <!--GRAFICA 1-->
+        <div id="chContainer1">
+          <div id="chart1" class="chart"></div>
+        </div>
+     </div>
+
+    </ion-col>
+    <ion-col class="entryData">
+
+      <div id="chartContainer">
+        <!--GRAFICA 1-->
+        <div id="chContainer1">
+          <div id="chart2" class="chart"></div>
+        </div>
+     </div>
+
+    </ion-col>
+  </ion-row>
+
+</ion-grid>
+
+
+  <!--ultima grafica-->
   <div id="chartStack">
     <div id="chartStack" class="chart"></div>
   </div>
