--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -63,14 +63,13 @@
             class="Button border"
             fill="clear"
             expand="block"
-            (click)="logout()"
+            (click)="onAlert()"
             >
             <ion-icon slot="end" class="ButtonIcon" name="log-out" size="large"></ion-icon>
             <div class="ButtonText">
               <ion-text>Cerrar sesión</ion-text>
             </div>
             </ion-button>
-
 
         </div>
 
