api endpoint changed

--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -44,10 +44,10 @@
 
   <div class="container-bottom animate__animated animate__lightSpeedInRight ">
     <ion-text>
-      <p>¿No tienes una cuenta? <a href="/auth/signup">Regístrate</a></p>
+      <p>¿No tienes una cuenta? <a (click)="goToRegister()">Regístrate</a></p>
     </ion-text>
     <ion-text>
-      <p>¿Olvidaste tu contraseña? <a href="/auth/forgot-password">Recupérala</a></p>
+      <p>¿Olvidaste tu contraseña? <a   (click)="forgotPassword()">Recupérala</a></p>
     </ion-text>
   </div>
 
