--- a/src/app/auth/signup/signup.page.html
+++ b/src/app/auth/signup/signup.page.html
@@ -1,8 +1,8 @@
 <ion-header>
   <ion-toolbar>
-    
+
     <ion-title>Registro</ion-title>
-    
+
   </ion-toolbar>
 </ion-header>
 
@@ -38,10 +38,10 @@
           </ion-item>
         </ion-list>
 
-        
+
           <ion-button expand="block" color="primary" class="btn-login" mode="ios"
             (click)="nextStep()">Continuar</ion-button>
-        
+
       </div>
     </div>
 
@@ -58,10 +58,10 @@
           <ion-button expand="block" color="primary" class="btn-login" mode="ios"
             (click)="step2()">Continuar</ion-button>
         </div>
-        
+
 
       </div>
-      
+
 
     </div>
     <div *ngIf="step === 3">
@@ -86,7 +86,7 @@
           <ion-button expand="block" color="primary" class="btn-login" mode="ios"
             (click)="step3()">Continuar</ion-button>
         </div>
-        
+
       </div>
     </div>
     <div *ngIf="step === 4">
@@ -97,7 +97,7 @@
           <ion-note slot="error" *ngIf="(email.dirty || email.touched) && email.errors">Por favor ingresa un correo
             electrónico</ion-note>
         </ion-item>
-  
+
         <ion-item>
           <ion-label position="stacked" color="primary">Contraseña</ion-label>
           <ion-input type="password" placeholder="........." formControlName="password"></ion-input>
@@ -108,16 +108,16 @@
           <ion-button (click)="prevStep()" color="light">Regresar</ion-button>
           <ion-button expand="block" color="primary" class="btn-login" mode="ios" (click)="signup()">Registrar</ion-button>
         </div>
-        
+
 
       </div>
-      
+
     </div>
   </form>
   <div class="container-bottom animate__animated animate__lightSpeedInRight ">
     <ion-text>
-      <p>¿Ya tienes cuenta? <a href="/auth/login">Inicia sesión</a></p>
-    </ion-text>  
+      <p>¿Ya tienes cuenta? <a (click)="goToLogin()">Inicia sesión</a></p>
+    </ion-text>
   </div>
 
 </ion-content>
