--- a/src/app/components/modal-reg-entry-n-exit/modal-reg-entry-n-exit.component.html
+++ b/src/app/components/modal-reg-entry-n-exit/modal-reg-entry-n-exit.component.html
@@ -3,14 +3,22 @@
     <ion-title>
       Registro de Entrada/Salida
     </ion-title>
+    <ion-buttons style="padding-left: 0;" slot="end">
+      <ion-button style="padding: 0; margin: 0;" type="submit" [strong]="true" color="secundary" >
+        Finalizar<ion-icon style="padding: 0; margin: 0;" slot="end" name="checkmark-outline">
+        </ion-icon></ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
 
-  <ion-button expand="block" (click)="startDetection()">Iniciar Detección</ion-button>
+    <ion-button expand="block" (click)="startDetection()">Iniciar Detección</ion-button>
+
     <video id="video" autoplay="true"></video>
-      <canvas id="canvas"></canvas>
-  <select id="camera-select"></select>
+
+    <canvas id="canvas"></canvas>
+
+    <select id="camera-select"></select>
 
 </ion-content>
