Modificacionesde estilo en tab2

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -8,7 +8,7 @@
 
 <ion-content [fullscreen]="true" mode="ios">
 
-  <ion-card class="homeBorder">
+  <ion-card class="homeBorder" >
 
     <ion-card-header class="homeCardHeader">
 
@@ -20,10 +20,10 @@
 
     <ion-card-content class="homeCardContent">
 
-      <ion-grid style="margin-top: 5%;">
+      <ion-grid style="margin-top: 1%;">
         <ion-row>
           <ion-col class="entryData">
-            1119
+            1119s
           </ion-col >
           <ion-col class="entryData">
             9980
@@ -35,9 +35,8 @@
 
       </ion-grid>
 
-      <ion-grid >
-
-        <ion-row >
+      <ion-grid style="margin-bottom: 1%;">
+        <ion-row>
             <ion-col class="labelData">
               Faltas
             </ion-col>
@@ -54,7 +53,6 @@
     </ion-card-content>
 
   </ion-card>
-
 
   <div id="chart0" class="chart chartBorder"></div>
 
