Ajuste final de tab2

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -75,6 +75,7 @@
               <img alt="" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
             </ion-avatar>
           <ion-label style = "font-family: QuickSand; font-weight: 500;">Huey</ion-label>
+          <ion-label slot="end" style = "font-family: QuickSand; font-weight: 500;">1</ion-label>
         </ion-item>
 
         <ion-item  lines="none">
@@ -82,6 +83,7 @@
             <img alt="" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
           </ion-avatar>
         <ion-label style = "font-family: QuickSand; font-weight: 500;">Dewey</ion-label>
+        <ion-label slot="end" style = "font-family: QuickSand; font-weight: 500;">2</ion-label>
         </ion-item>
         </ion-list>
 
