tabla tab2 funcional, boton finalizar camara

--- a/src/app/components/modal-reg-entry-n-exit/modal-reg-entry-n-exit.component.html
+++ b/src/app/components/modal-reg-entry-n-exit/modal-reg-entry-n-exit.component.html
@@ -1,10 +1,10 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Registro de Entrada/Salida
+      Registrar
     </ion-title>
     <ion-buttons style="padding-left: 0;" slot="end">
-      <ion-button style="padding: 0; margin: 0;" type="submit" [strong]="true" color="secundary" >
+      <ion-button (click)="cancel()" style="padding: 0; margin: 0;" type="submit" [strong]="true" color="secundary" >
         Finalizar<ion-icon style="padding: 0; margin: 0;" slot="end" name="checkmark-outline">
         </ion-icon></ion-button>
     </ion-buttons>
