Ajustes visuales tab2, modal info empleado

--- a/src/app/components/modal-view-employee-info/modal-view-employee-info.component.html
+++ b/src/app/components/modal-view-employee-info/modal-view-employee-info.component.html
@@ -14,7 +14,7 @@
 
       <ion-card style=" box-shadow: none !important;">
         <ion-card-header>
-          <ion-card-title style="text-align: center; top:10px;">{{employeeName}} {{employeeFirstName}} {{employeeLastName}}</ion-card-title>
+          <ion-card-title style="text-align: center; top:10px;">{{employeeName}} <br>{{employeeFirstName}} {{employeeLastName}}</ion-card-title>
           <ion-card-subtitle style="text-align: center; top:10px;">Empleado</ion-card-subtitle>
 
           <!--FOTO DE PERFIL-->
